2004-06-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (mainloop): Yet another tweak to the mouse timing code.
	This one reduces mouse-tracking hysteresis on systems that claim to have
	usleep() but in fact have much coarser timing.

2004-06-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/save.c: Save log cb axis (bugfix).

2004-06-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c: Do not start zooming during 'pause mouse'.

2004-06-12  Ethan Merritt  <merritt@u.washington.edu>

	* show.c (show_datafile): Provide missing show commands for suboptions
	"show datafile {separator|comment|missing}".

2004-06-12  Ethan Merritt  <merritt@u.washington.edu>

	* datafile.h: define DF_MISSING as a return code from df_readline().
	* datatile.c (df_readline): If a data field contains the missing data
	string, return DF_MISSING rather than DF_UNDEFINED.
	* fit.c (fit_command): Explicitly ignore DF_MISSING data.
	* plot2d.c (get_data): Explicitly test for data marked DF_MISSING 
	but treat it the same as DF_UNDEFINED.
	* plot3d.c (get_3ddata): Explicitly test for data marked DF_MISSING 
	but treat it the same as DF_UNDEFINED.
	
	These are trivial changes that do not affect the existing behavior of
	gnuplot. However, the core routines in plot2d and plot3d now have the
	information needed to treat missing data differently depending on the
	plot style if desired.

2004-06-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c src/command.h src/mouse.c src/gplt_x11.c
	term/x11.trm docs/gnuplot.doc docs/gnuplot.texi:  
	`pause mouse keypress` option behaves exactly as `pause mouse` except
	that the pause can be terminated by a keystroke while the plot window
	has focus. On return, the variable MOUSE_KEY contains the mouse button
	number if the pause terminated on a mouse click, otherwise it contains
	the key code of the key that was pressed. Normal ascii characters will
	return their ascii code; other keyboard keys are assigned codes from a